# DONTFLOAT

./: .clang-tidy  .clangd  .gitattributes  .gitignore  ARCHITECTURE.md  AVITO_CLASS_FIX.md  BUILD_IN_VSCODE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DONTFLOAT.pro  ISSUES_AND_PLANS.md  LICENSE  Makefile  README.md  acqmnf.json  avito_parser_test.py  resources.qrc
.cursor/commands/: init.md
.github/workflows/: ci.yml
MARKDOWN/: ARCHITECTURE.md  BEAT_DEVIATION_VISUALIZATION.md  CONSOLE_MODE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_HISTORY.md  DOCUMENTATION_CHANGELOG.md  FEATURES.md  INIT.MD  ISSUES_AND_PLANS.md  MIXXX_LIBRARIES_STATUS.md  PLAN_FIX_BEAT_DEVIATION_TRIANGLES.md  PLAN_REALTIME_MARKER_STRETCH.md  PLAN_TIMESTRETCH_WITH_PITCH.md  PROJECT_FLOWCHART.md  PROJECT_SCHEME.html  PROJECT_SCHEME_DETAILED.html  README.md  SHORTCUTS.md  SUMMARY_BEAT_DEVIATION_FIX.md  TESTING_GUIDE.md  TIMESTRETCH_FEATURE.md  TROUBLESHOOTING.md  UPDATE_SUMMARY_2025-01-08.md
cmake/: PlatformQt.cmake  RubberBand.cmake  WinDeployQt.cmake
docs/: architecture.md  beat_visualization.md  features.md  shortcuts.md  usage.md
include/: audiocommand.h  audiofileservice.h  beatfixcommand.h  beatvisualizationsettingsdialog.h  beatvisualizer.h  bpmanalyzer.h  bpmfixdialog.h  fft_engine.h  granularpitchshifter_engine.h  keyanalyzer.h  keyselectionmenu.h  loadfiledialog.h  mainwindow.h  markerengine.h  markersfile.h  markerstretchengine.h  markertestgenwindow.h  metronomecontroller.h  metronomesettingsdialog.h  mixxxbpmanalyzer.h  pitchgridwidget.h  pitchshiftsettingsdialog.h  reverbsc_engine.h  reverbsettingsdialog.h  rubberband_offline.h  shortcutsdialog.h  spectrogramsettingsdialog.h  timestretchcommand.h  timestretchprocessor.h  timeutils.h  uiconstants.h  waveformanalyzer.h  waveformcolors.h  waveformview.h  wavwriter.h
resources/: app.rc
resources/sounds/: metronome.flac
resources/styles/: scrollbars_dark.qss  scrollbars_light.qss
scripts/: build.sh  package.sh
src/: audiocommand.cpp  audiofileservice.cpp  beatfixcommand.cpp  beatvisualizationsettingsdialog.cpp  beatvisualizer.cpp  bpmanalyzer.cpp  bpmfixdialog.cpp  keyanalyzer.cpp  keyselectionmenu.cpp  loadfiledialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  markerengine.cpp  markersfile.cpp  markerstretchengine.cpp  markertestgenwindow.cpp  metronomecontroller.cpp  metronomesettingsdialog.cpp  mixxxbpmanalyzer.cpp  pitchgridwidget.cpp  pitchshiftsettingsdialog.cpp  reverbsettingsdialog.cpp  rubberband_offline.cpp  shortcutsdialog.cpp  spectrogramsettingsdialog.cpp  timestretchcommand.cpp  timestretchprocessor.cpp  timeutils.cpp  waveformanalyzer.cpp  waveformcolors.cpp  waveformview.cpp  waveformview_from_stash.cpp  wavwriter.cpp
src/App/: Application.cpp  Application.h
src/Audio/: AudioLoader.cpp  AudioLoader.h  BPMAligner.cpp  BPMAligner.h  BPMAnalyzer.cpp  BPMAnalyzer.h  WaveformRenderer.cpp  WaveformRenderer.h
src/UI/: MainWindow.cpp  MainWindow.h  Resources.qrc
src/Utils/: FileDialogHelper.cpp  FileDialogHelper.h
tests/: CMakeLists.txt  README.md  RunQtTest.cmake  beat_deviation_test.cpp  bpm_analyzer_test.cpp  markersfile_test.cpp  pitch_compensation_file_test.cpp  run_tests.bat  run_tests.ps1  run_tests.sh  timestretchprocessor_test.cpp  ui_responsiveness_test.cpp
tests/source4test/: README.md
tools/: README.md  apply_remaining_en.py  build_deb.sh  build_rpm.sh  build_windows_installer.bat  clean_ts_vanished.py  dontfloat.desktop  macos_build.sh  marker_testgen_main.cpp  nsis_installer.nsi  setup_macos.sh  setup_wsl_debian.sh  svg_to_ico.py  untranslated_sources.txt  wsl_debian_env.sh
tools/debian/: changelog  control  copyright  rules
tools/rpm/: dontfloat.spec
translations/: CMakeLists.txt  DONTFLOAT_en_US.ts  DONTFLOAT_ru_RU.ts  dontfloat_ru.ts  en_US.ts  ru_RU.ts
ui/: beatvisualizationsettingsdialog.ui  loadfiledialog.ui  mainwindow.ui  metronomesettingsdialog.ui
